[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Level 4.gd" type="Script" id=1]
[ext_resource path="res://libraries/Blocks.tres" type="MeshLibrary" id=2]
[ext_resource path="res://libraries/safe_block.tres" type="MeshLibrary" id=3]
[ext_resource path="res://assets/wall_material.tres" type="Material" id=4]
[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/rotate of death BIG.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/coin.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.776, -3 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "respawn_point"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.776, -3 ) ]
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 3, 1, 2 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="BoxShape" id=4]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "rotate_big_death"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ), Vector3( 0, -180, 0 ), Vector3( 0, -270, 0 ), Vector3( 0, -360, 0 ) ]
}

[node name="Level 4" type="Spatial"]
script = ExtResource( 1 )

[node name="respawn" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/respawn_point = SubResource( 1 )

[node name="blocks" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( -65536, 0, 1, -65535, 0, 0, -2, 0, 1, -1, 0, 0, -65536, 1, 0, -65535, 1, 1, -65534, 1, 0, -3, 1, 1, -2, 1, 0, -1, 1, 1, -65536, 2, 1, -65535, 2, 0, -65534, 2, 1, -65533, 2, 0, -4, 2, 1, -3, 2, 0, -2, 2, 1, -1, 2, 0, -65536, 3, 0, -65535, 3, 1, -65534, 3, 0, -65533, 3, 1, -4, 3, 0, -3, 3, 1, -2, 3, 0, -1, 3, 1, -65536, 4, 1, -65535, 4, 0, -65534, 4, 1, -65533, 4, 0, -4, 4, 1, -3, 4, 0, -2, 4, 1, -1, 4, 0, -65536, 5, 0, -65535, 5, 1, -65534, 5, 0, -65533, 5, 1, -4, 5, 0, -3, 5, 1, -2, 5, 0, -1, 5, 1, -65536, 6, 1, -65535, 6, 0, -65534, 6, 1, -3, 6, 0, -2, 6, 1, -1, 6, 0, -65536, 7, 0, -65535, 7, 1, -2, 7, 0, -1, 7, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="safe" type="Spatial" parent="."]

[node name="safe" type="GridMap" parent="safe"]
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray( -7, 3, 0, -6, 3, 0, -5, 3, 0, -7, 4, 0, -6, 4, 0, -5, 4, 0, -65536, 65533, 0, -1, 65533, 0, -65536, 65534, 0, -1, 65534, 0, -65536, 65535, 0, -1, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="Area" type="Area" parent="safe"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 0, 8 )

[node name="CollisionShape" type="CollisionShape" parent="safe/Area"]
shape = SubResource( 2 )

[node name="walls" type="Spatial" parent="."]

[node name="wall1" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall1"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall1"]
shape = SubResource( 4 )

[node name="wall2" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall2"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall2"]
shape = SubResource( 4 )

[node name="wall3" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall3"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall3"]
shape = SubResource( 4 )

[node name="wall4" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0, 5 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall4"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall4"]
shape = SubResource( 4 )

[node name="wall5" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0, 11 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall5"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall5"]
shape = SubResource( 4 )

[node name="wall6" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 13 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall6"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall6"]
shape = SubResource( 4 )

[node name="wall7" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 15 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall7"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall7"]
shape = SubResource( 4 )

[node name="wall8" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 15 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall8"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall8"]
shape = SubResource( 4 )

[node name="wall9" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 13 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall9"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall9"]
shape = SubResource( 4 )

[node name="wall10" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall10"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall10"]
shape = SubResource( 4 )

[node name="wall11" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall11"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall11"]
shape = SubResource( 4 )

[node name="wall12" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -1 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall12"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall12"]
shape = SubResource( 4 )

[node name="wall13" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 3, 0, -4 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall13"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall13"]
shape = SubResource( 4 )

[node name="wall14" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, -3, 0, -4 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall14"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall14"]
shape = SubResource( 4 )

[node name="wall15" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, 4, 0, 1, 0, -1, 0, -1.74846e-07, 0, 0, -7 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall15"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall15"]
shape = SubResource( 4 )

[node name="wall16" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, 4, 0, 1, 0, -1, 0, -1.74846e-07, 0, 0, 17 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall16"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall16"]
shape = SubResource( 4 )

[node name="wall17" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, -3.49691e-07, 0, 1, 0, 8.74228e-08, 0, -4, 9, 0, 8 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall17"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall17"]
shape = SubResource( 4 )

[node name="wall18" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, -6.03983e-07, 0, 1, 0, 1.50996e-07, 0, -4, -15, 0, 8 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall18"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall18"]
shape = SubResource( 4 )

[node name="wall19" type="StaticBody" parent="walls"]
transform = Transform( 1.94707e-07, 0, -2, 0, 1, 0, 1, 0, 3.89414e-07, -12, 0, 5 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall19"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall19"]
shape = SubResource( 4 )

[node name="wall20" type="StaticBody" parent="walls"]
transform = Transform( 1.94707e-07, 0, -2, 0, 1, 0, 1, 0, 3.89414e-07, -12, 0, 11 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall20"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall20"]
shape = SubResource( 4 )

[node name="coins" type="Spatial" parent="."]

[node name="coin" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0.776, 2 )

[node name="coin2" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 6, 0.776, 8 )

[node name="coin3" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0.776, 14 )

[node name="enimies" type="Spatial" parent="."]

[node name="rotate of death BIG" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.776, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/rotate of death BIG"]
autoplay = "rotate_big_death"
anims/RESET = SubResource( 6 )
anims/rotate_big_death = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0.776, -3 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 12, 21 )

[connection signal="reset_level" from="." to="coins/coin" method="_on_Level_4_reset_level"]
[connection signal="reset_level" from="." to="coins/coin2" method="_on_Level_4_reset_level"]
[connection signal="reset_level" from="." to="coins/coin3" method="_on_Level_4_reset_level"]
[connection signal="body_entered" from="safe/Area" to="." method="_on_Area_body_entered"]
[connection signal="coin_collect" from="coins/coin" to="." method="_on_coin_coin_collect"]
[connection signal="coin_collect" from="coins/coin2" to="." method="_on_coin_coin_collect"]
[connection signal="coin_collect" from="coins/coin3" to="." method="_on_coin_coin_collect"]
[connection signal="player_hit" from="enimies/rotate of death BIG" to="." method="_on_rotate_of_death_BIG_player_hit"]
